---
source: rust/schema/tests/merge.rs
expression: "Fixture { old, new, ops }"
---
old:
  type: Article
  content:
    - type: Figure
      content:
        - type: Paragraph
          content:
            - type: ImageObject
              contentUrl: "https://example.org/cat.jpg"
      caption:
        - type: Paragraph
          content:
            - type: Text
              value: Caption.
new:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: Caption.
    - type: Paragraph
      content:
        - type: ImageObject
          contentUrl: "https://example.org/cat.jpg"
ops:
  - - - content
    - Push:
        type: Paragraph
        content:
          - type: ImageObject
            contentUrl: "https://example.org/cat.jpg"
  - - - content
    - Replace:
        - - 0
          - type: Paragraph
            content:
              - type: Text
                value: Caption.
